# flask-djangofy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  PKG-INFO  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
docs/: cmd.md  index.md  initializers.md  installation.md  releases.md  todo.md  views.md
flask_djangofy/: __init__.py  __main__.py
flask_djangofy/apps/: config.py  registry.py
flask_djangofy/commands/: __init__.py  base.py  runserver.py  show_help.py  startapp.py  startproject.py  templates.py
flask_djangofy/conf/: __init__.py  config.py  global_settings.py
flask_djangofy/conf/app_template/: apps.py-tpl  urls.py-tpl  views.py-tpl
flask_djangofy/conf/project_template/: manage.py-tpl
flask_djangofy/conf/project_template/project_name/: settings.py-tpl  urls.py-tpl  wsgi.py-tpl
flask_djangofy/core/: exceptions.py  management.py  runner.py  wsgi.py
flask_djangofy/core/management/: __init__.py  base.py  color.py  templates.py  utils.py
flask_djangofy/core/management/commands/: runserver.py  show_help.py  startapp.py  startproject.py
flask_djangofy/initializers/: base.py  routes.py
flask_djangofy/templates/: default_urlconf.html
flask_djangofy/templates/startapp/: apps.txt  views.txt
flask_djangofy/templates/startproject/: settings.txt  wsgi.txt
flask_djangofy/urls/: __init__.py  include.py  path.py
flask_djangofy/utils/: __init__.py  crypto.py  encoding.py  functional.py  import_util.py  module_loading.py  regex_helper.py  singleton.py  termcolors.py  versions.py
flask_djangofy/views/: __init__.py  base.py
scripts/: rpm-install.sh
