[metadata]
name = flask-djangofy
version = attr: flask_djangofy.__version__
url = https://flask-djangofy.readthedocs.io/en/latest/
author = Muhammad Hassan Siddiqui
author_email = mhassan.eeng@gmail.com
description = A Flask package which looks like Django
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 1 - Beta
    Environment :: Web Environment
    Framework :: flask-djangofy
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://flask-djangofy.readthedocs.io/en/latest/
    Release notes = https://flask-djangofy.readthedocs.io/en/latest/releases/
    Source = https://github.com/mhsiddiqui/flask-djangofy

[options]
python_requires = >=3.5
packages = find:


include_package_data = true
zip_safe = false
install_requires =
    Flask
    pre-commit>=1.20.0
    Jinja2

[options.entry_points]
console_scripts =
    flask-djangofy-admin = flask_djangofy.core.management:execute_from_command_line

[bdist_rpm]
doc_files = docs LICENSE.rst README.rst
install-script = scripts/rpm-install.sh

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = flask_djangofy
line_length = 79
multi_line_output = 5


